Javadoc Maxxing